--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.1",
     "uuid": "^3.3.2",
-    "video-react": "^0.13.6"
+    "video-react": "^0.13.6",
+    "yarn": "^1.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
