--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "beyond",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://saahilshaikh.github.io/beyond",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "core-js": "^3.1.3",
@@ -31,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "gh-pages": "^2.0.1"
